--- a/.github/workflows/build_config.yml
+++ b/.github/workflows/build_config.yml
@@ -1,23 +1,31 @@
 name: Viro Renderer CI Pipeline
-on: [push]
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   android_virocore_build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2.3.4
     - name: set up JDK 1.8
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
-        java-version: 1.8
+        distribution: 'adopt'
+        java-version: 8
     - name: assmble release ViroCore
-      run: bash ./gradlew :virocore:assembleRelease
+      run: ./gradlew :virocore:assembleRelease
       working-directory: ./android
     - name: Upload result ViroCore
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v2.2.3
       with: 
         name: virocore.aar
-        path: ./android/virocore/build/outputs/aar/virocore-release-v_1_17_0.aar
+        path: ./android/virocore/build/outputs/aar/*-release*.aar
         
   android_viroreact_build:
     runs-on: ubuntu-latest
@@ -31,15 +39,15 @@ jobs:
       run: bash ./gradlew :viroreact:assembleRelease
       working-directory: ./android
     - name: Upload result ViroReact
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v2.2.3
       with: 
         name: viroreact.aar
-        path: ./android/viroreact/build/outputs/aar/viroreact-release.aar
+        path: ./android/viroreact/build/outputs/aar/*-release.aar
 
   ios_viroreact_build:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2.3.4
       - name: Install gpg
         run: brew install gnupg
       - name: Set XCode Version 11.2
