--- a/.github/workflows/gradle-wrapper-validation.yml
+++ b/.github/workflows/gradle-wrapper-validation.yml
@@ -1,19 +1,20 @@
-name: "Validate Gradle Wrapper"
+name: "Gradle Wrapper"
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
 
 jobs:
   validation:
-    name: "Validation"
+    name: "Validate"
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ matrix.example }}
+    strategy:
+      matrix:
+        example: [ android, code-samples/ARBlackPanther, code-samples/ARHelloWorldAndroid, code-samples/ARPlacingObjects, code-samples/ARRetail, code-samples/ARTesla ]
     steps:
       - uses: actions/checkout@v2.3.4
-      - name: Change directory
-        run: cd android
       - uses: gradle/wrapper-validation-action@v1
