--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -36,3 +36,5 @@ signing.keyId=4AC2A9D91D15FCD53C885A968ED94C0BF6523244
 signing.password=Vir0P0laris
 signing.secretKeyRingFile=/Users/manish/.gnupg/secring.gpg
 org.gradle.daemon=true
+android.useAndroidX=true
+android.enableJetifier=true
