--- a/android/nativetest/build.gradle
+++ b/android/nativetest/build.gradle
@@ -64,5 +64,5 @@ dependencies {
     implementation project(':libs:arcore')
     implementation project(':libs:gvr')
     implementation project(':virocore')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation "androidx.appcompat:appcompat:1.2.0"
 }
