--- a/android/releasetest/build.gradle
+++ b/android/releasetest/build.gradle
@@ -12,7 +12,7 @@ android {
         versionName "1.0"
 
         testApplicationId "com.viromedia.releasetest"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         missingDimensionStrategy 'product', 'viro_core'
         ndk {
             abiFilters "armeabi-v7a", "arm64-v8a"
@@ -80,13 +80,13 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation project(':virocore')
     implementation project(':libs:arcore')
     implementation project(':libs:gvr')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation "androidx.appcompat:appcompat:1.2.0"
     // testing dependencies
     androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'org.awaitility:awaitility:3.0.0'
