--- a/android/viroar/build.gradle
+++ b/android/viroar/build.gradle
@@ -42,7 +42,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation "androidx.appcompat:appcompat:1.2.0"
 }
 
 // Extract the .so files (libviro_arcore.so) for each architecture and place them in the build/natives
