--- a/android/virocore/build.gradle
+++ b/android/virocore/build.gradle
@@ -85,7 +85,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation "androidx.appcompat:appcompat:1.2.0"
     implementation 'com.google.android.exoplayer:exoplayer:2.7.1'
     implementation project(':libs:gvr')
     implementation project(':libs:arcore')
