Fix 'More than one file was found with OS independent'

--- a/android/virocore/build.gradle
+++ b/android/virocore/build.gradle
@@ -72,6 +72,23 @@ android {
     packagingOptions {
         // x86 is currently not supported, so do not copy over these resources
         exclude '**/x86/**'
+
+        pickFirst 'lib/armeabi-v7a/libBulletDynamics.so'
+        pickFirst 'lib/armeabi-v7a/libgvr.so'
+        pickFirst 'lib/armeabi-v7a/libgvr_audio.so'
+        pickFirst 'lib/armeabi-v7a/libfreetyped.so'
+        pickFirst 'lib/armeabi-v7a/libBulletCollision.so'
+        pickFirst 'lib/armeabi-v7a/libLinearMath.so'
+        pickFirst 'lib/armeabi-v7a/libvrapi.so'
+        pickFirst 'lib/armeabi-v7a/libBulletSoftBody.so'
+        pickFirst 'lib/arm64-v8a/libBulletDynamics.so'
+        pickFirst 'lib/arm64-v8a/libgvr.so'
+        pickFirst 'lib/arm64-v8a/libgvr_audio.so'
+        pickFirst 'lib/arm64-v8a/libfreetyped.so'
+        pickFirst 'lib/arm64-v8a/libBulletCollision.so'
+        pickFirst 'lib/arm64-v8a/libLinearMath.so'
+        pickFirst 'lib/arm64-v8a/libvrapi.so'
+        pickFirst 'lib/arm64-v8a/libBulletSoftBody.so'
     }
 }
 
