--- a/android/viroar/build.gradle
+++ b/android/viroar/build.gradle
@@ -18,6 +18,11 @@ android {
                 cppFlags "-std=c++14 -frtti -fcxx-exceptions"
             }
         }
+
+        packagingOptions {
+            pickFirst 'lib/armeabi-v7a/libarcore_sdk_c.so'
+            pickFirst 'lib/arm64-v8a/libarcore_sdk_c.so'
+        }
     }
 
     externalNativeBuild {
