--- a/android/.gitignore
+++ b/android/.gitignore
@@ -1,12 +1,10 @@
 *.iml
-app/gradlew
-app/gradlew.bat
 .gradle
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
-*build/
+build
 /captures
 .externalNativeBuild
 .cxx
