--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,10 +5,13 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
 
 allprojects {
+    group = 'com.viroCommunity'
+    version = getTagVersion()
     repositories {
         jcenter()
         google()
@@ -17,4 +20,9 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+static def getTagVersion() {
+    def process = "git describe --tags".execute()
+    return process.text.toString().trim()
 }
