--- a/android/virocore/build.gradle
+++ b/android/virocore/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply from: 'preprocessor.gradle'
+apply plugin: 'maven-publish'
 
 android {
     flavorDimensions  "product"
@@ -49,16 +50,6 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            libraryVariants.all { variant ->
-                variant.outputs.all { output ->
-                    //TODO This variable will come from maven-push.gradle when we integrate pushing
-                    // maven in our builds. This is temporary.
-                    def version = '-v_1_17_0'
-                    def newName = output.outputFile.name
-                    outputFileName = newName.replace("-release", "-release" + version)
-                    //outputFileName = new File(output.outputFile.parent, newName)
-                }
-            }
         }
         debug {
             minifyEnabled false
@@ -110,5 +101,13 @@ dependencies {
 tasks.whenTaskAdded {
     task-> if (task.name.contains("external") && !task.name.contains("Clean")) {
         task.dependsOn ':viroar:assembleRelease'
+    }
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.all {}
+        }
     }
 }
