--- a/android/viroreact/build.gradle
+++ b/android/viroreact/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
 
 android {
     compileSdkVersion 28
@@ -134,3 +135,10 @@ tasks.whenTaskAdded { task ->
     }
 }
 
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.all {}
+        }
+    }
+}
