--- a/.github/workflows/build_config.yml
+++ b/.github/workflows/build_config.yml
@@ -42,6 +42,33 @@ jobs:
         name: viroreact.aar
         path: ./android/viroreact/build/outputs/aar/*-release.aar
 
+  AndroidCheck:
+    name: Check
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: android
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
+        with:
+          fetch-depth: 0
+      - name: Install JDK 11
+        uses: actions/setup-java@v2
+        with:
+          distribution: "adopt"
+          java-version: 11
+      - name: Code checks
+        run: ./gradlew check
+      - name: Archive Lint report
+        uses: actions/upload-artifact@v2.2.4
+        if: ${{ always() }}
+        with:
+          name: Viro-Lint-report
+          path: |
+            ./**/build/reports/lint-results.html
+            ./**/**/build/reports/lint-results.html
+
   ios_viroreact_build:
     runs-on: macos-latest
     steps:
