--- a/code-samples/ARPlacingObjects/app/build.gradle
+++ b/code-samples/ARPlacingObjects/app/build.gradle
@@ -14,6 +14,11 @@ android {
             abiFilters "armeabi-v7a", "x86", "armeabi", "mips"
         }
     }
+
+    lintOptions {
+        disable 'UsingOnClickInXml'
+    }
+
     buildTypes {
         release {
             minifyEnabled false
