--- a/android/nativetest/build.gradle
+++ b/android/nativetest/build.gradle
@@ -12,7 +12,7 @@ android {
         versionName "1.0"
         missingDimensionStrategy 'product', 'viro_core'
         ndk {
-            abiFilters "armeabi-v7a", "arm64-v8a"
+            abiFilters "arm64-v8a", "armeabi-v7a"
         }
     }
     buildTypes {
