--- a/android/viroar/build.gradle
+++ b/android/viroar/build.gradle
@@ -9,7 +9,7 @@ android {
         targetSdkVersion 30
 
         ndk {
-            abiFilters "armeabi-v7a", "arm64-v8a"
+            abiFilters "arm64-v8a", "armeabi-v7a"
         }
         externalNativeBuild {
             cmake {
