--- a/android/virocore/build.gradle
+++ b/android/virocore/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdkVersion 30
 
         ndk {
-            abiFilters "armeabi-v7a", "arm64-v8a"
+            abiFilters "arm64-v8a", "armeabi-v7a"
         }
 
         externalNativeBuild {
