--- a/android/viroreact/build.gradle
+++ b/android/viroreact/build.gradle
@@ -12,7 +12,7 @@ android {
             // React Native does not support arm64-v8a yet, so don't bother including
             // it here.
             // Tracking issue for RN: https://github.com/facebook/react-native/issues/2814
-            abiFilters "armeabi-v7a", "arm64-v8a"
+            abiFilters "arm64-v8a", "armeabi-v7a"
         }
 
         // Note that viro_arcore does not use STL, so we can still use static STL in viro_native
