--- a/code-samples/ARRetail/app/src/main/AndroidManifest.xml
+++ b/code-samples/ARRetail/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.virosample">
 
+    <queries>
+        <package android:name="com.google.ar.core"/>
+    </queries>
     <!-- Required for AR -->
     <uses-permission android:name="android.permission.CAMERA"/>
 
@@ -16,9 +19,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <meta-data
-            android:name="com.viromedia.API_KEY"
-            android:value="API_KEY_HERE" />
         <meta-data android:name="com.google.ar.core" android:value="optional" />
 
         <activity
