--- a/code-samples/ARTesla/app/build.gradle
+++ b/code-samples/ARTesla/app/build.gradle
@@ -6,13 +6,13 @@ android {
     defaultConfig {
         applicationId "com.example.virosample"
         applicationIdSuffix ".arcore"
-        minSdkVersion 21
+        minSdkVersion 24
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         ndk {
-            abiFilters "armeabi-v7a", "x86", "armeabi", "mips"
+            abiFilters "arm64-v8a", "armeabi-v7a", "x86", "armeabi", "mips"
         }
     }
     buildTypes {
@@ -36,9 +36,4 @@ dependencies {
     implementation project(':arcore_client')
     implementation project(':viro_core')
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
-    implementation 'com.amazonaws:aws-android-sdk-core:2.7.7'
-    implementation 'com.amazonaws:aws-android-sdk-ddb:2.7.7'
-    implementation 'com.amazonaws:aws-android-sdk-ddb-mapper:2.7.7'
-    implementation 'com.amazonaws:aws-android-sdk-cognito:2.7.7'
-    implementation 'com.amazonaws:aws-android-sdk-cognitoidentityprovider:2.7.7'
 }
