--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,10 +41,12 @@ dependencies {
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.2.0rc2'
 }
 
-publishing {
-    publications {
-        maven(MavenPublication) {
-            from components.all {}
+project.afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+            }
         }
     }
 }
