--- a/android/viroreact/build.gradle
+++ b/android/viroreact/build.gradle
@@ -129,10 +129,12 @@ tasks.whenTaskAdded { task ->
     }
 }
 
-publishing {
-    publications {
-        maven(MavenPublication) {
-            from components.all {}
+project.afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+            }
         }
     }
 }
