--- a/code-samples/ARRetail/app/build.gradle
+++ b/code-samples/ARRetail/app/build.gradle
@@ -27,11 +27,9 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.exoplayer:exoplayer:2.7.1'
-    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     implementation project(':gvr_common')
     implementation project(':arcore_client')
     implementation project(':viro_core')
