--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.13.3'
     implementation project(':libs:gvr')
     implementation project(':libs:arcore')
-    implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
+    implementation 'com.google.protobuf.nano:protobuf-javanano:3.2.0rc2'
 }
 
 publishing {
