--- a/android/virocore/build.gradle
+++ b/android/virocore/build.gradle
@@ -83,7 +83,7 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.13.3'
     implementation project(':libs:gvr')
     implementation project(':libs:arcore')
-    implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
+    implementation 'com.google.protobuf.nano:protobuf-javanano:3.2.0rc2'
 }
 
 // We have to add dependencies to Android tasks in this deferred way because these tasks
