CI for new one-sample-rules-it-all apk

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -26,10 +26,9 @@ jobs:
       with: 
         name: viroCore
         path: |
-          ./android/virocore/build/outputs/aar/*-release*.aar
-          ./android/viroreact/build/outputs/aar/*-release*.aar
-          ./android/viroar/build/outputs/aar/*-release*.aar
-          ./android/sharedCode/build/outputs/aar/*-release*.aar
+          ./android/virocore/build/outputs/aar/*.aar
+          ./android/viroreact/build/outputs/aar/*.aar
+          ./android/viroar/build/outputs/aar/*.aar
 
   AndroidCheck:
     name: Check
