--- a/.github/workflows/gradle-wrapper-validation.yml
+++ b/.github/workflows/gradle-wrapper-validation.yml
@@ -14,7 +14,7 @@ jobs:
         working-directory: ${{ matrix.example }}
     strategy:
       matrix:
-        example: [ android, code-samples/ARBlackPanther, code-samples/ARHelloWorldAndroid, code-samples/ARPlacingObjects, code-samples/ARRetail, code-samples/ARTesla ]
+        example: [ android ]
     steps:
       - uses: actions/checkout@v2.3.4
       - uses: gradle/wrapper-validation-action@v1
