Keep apk during pull request
This makes it easier to test on real device

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: assemble ViroCore
       run: |
-        ./gradlew assembleRelease
+        ./gradlew assembleDebug
       working-directory: ./android
     - name: Upload result ViroCore
       uses: actions/upload-artifact@v2.2.4
