Flavor with/out aar or code

--- a/android/mainSample/build.gradle
+++ b/android/mainSample/build.gradle
@@ -28,6 +28,17 @@ android {
     packagingOptions {
         exclude "META-INF/*.kotlin_module"
     }
+
+    flavorDimensions "source"
+    productFlavors {
+        aar {
+            dimension "source"
+        }
+        code {
+            dimension "source"
+        }
+    }
+
 }
 
 dependencies {
