--- a/android/code-samples/ARHelloWorldAndroid/build.gradle
+++ b/android/code-samples/ARHelloWorldAndroid/build.gradle
@@ -22,6 +22,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    flavorDimensions "source"
+    productFlavors {
+        aar {
+            dimension "source"
+        }
+        code {
+            dimension "source"
+        }
+    }
 }
 
 dependencies {
@@ -30,9 +39,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     testImplementation 'junit:junit:4.13.2'
-    implementation project(':code-samples:gvr_common')
-    implementation project(':code-samples:arcore_client')
-    implementation('com.github.ViroCommunity.virocore:virocore:rc-1.20.2') {
+    api project(':code-samples:gvr_common')
+    api project(':code-samples:arcore_client')
+    aarImplementation('com.github.ViroCommunity.virocore:virocore:rc-1.20.2') {
+        transitive = false
+    }
+    codeImplementation (project(path: ':virocore')) {
         transitive = false
     }
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.2.0rc2'
