--- a/android/code-samples/ARTesla/build.gradle
+++ b/android/code-samples/ARTesla/build.gradle
@@ -39,7 +39,8 @@ dependencies {
     aarImplementation('com.github.ViroCommunity.virocore:virocore:rc-1.20.2') {
         transitive = false
     }
-    codeImplementation (project(path: ':virocore')) {
+    // api to be able to use BuildConfig in SystemInfoFragment
+    codeApi (project(path: ':virocore')) {
         transitive = false
     }
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.2.0rc2'
