--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,13 +6,11 @@
 version: 2
 updates:
   - package-ecosystem: "gradle"
-    strategy:
-      matrix:
-        example: [ android, code-samples/ARBlackPanther, code-samples/ARHelloWorldAndroid, code-samples/ARPlacingObjects, code-samples/ARRetail, code-samples/ARTesla ]
-    directory: ${{ matrix.example }}
+    directory: android
     target-branch: "main"
     schedule:
       interval: "daily"
+
   - package-ecosystem: "github-actions"
     directory: "/" # Location of package manifests
     target-branch: "main"
