--- a/android/releasetest/src/main/AndroidManifest.xml
+++ b/android/releasetest/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.viromedia.releasetest">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.viromedia.releasetest">
 
     <queries>
         <package android:name="com.google.ar.core"/>
@@ -11,13 +12,15 @@
 
     <!-- Required for AR -->
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
+        tools:ignore="AllowBackup">
         <uses-library
             android:name="android.support.test.runner"
             android:required="false" />
@@ -25,7 +28,8 @@
             android:name="com.viromedia.releasetest.ViroReleaseTestActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|uiMode"
             android:enableVrMode="false"
-            android:screenOrientation="sensor">
+            android:screenOrientation="sensor"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,5 +43,5 @@
             android:name="com.google.android.ar.API_KEY"
             android:value="AIzaSyCZy6wqu20yo-r6mUCne3KH0YrR18mP2QI" />
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
