--- a/android/releasetest/build.gradle
+++ b/android/releasetest/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     flavorDimensions "target_platform"
@@ -84,4 +85,6 @@ dependencies {
     // testing dependencies
     androidTestImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'org.awaitility:awaitility:4.1.0'
+    implementation "androidx.core:core-ktx:1.6.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
