--- a/android/memoryleaktest/build.gradle
+++ b/android/memoryleaktest/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     flavorDimensions "target_platform"
@@ -61,6 +62,6 @@ dependencies {
     implementation project(':libs:gvr')
     implementation project(':libs:arcore')
     implementation "androidx.appcompat:appcompat:1.3.1"
+    implementation "androidx.core:core-ktx:1.6.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
-
-
