--- a/android/releasetest/build.gradle
+++ b/android/releasetest/build.gradle
@@ -89,7 +89,9 @@ dependencies {
 
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.ext:truth:1.4.0"
-    androidTestImplementation 'org.awaitility:awaitility:4.1.0'
+    androidTestImplementation('org.awaitility:awaitility:4.1.0') {
+        transitive = false
+    }
     implementation "androidx.core:core-ktx:1.6.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
