--- a/android/memoryleaktest/src/main/AndroidManifest.xml
+++ b/android/memoryleaktest/src/main/AndroidManifest.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.memoryleaktest">
+    package="com.example.memoryleaktest">
 
     <queries>
-        <package android:name="com.google.ar.core"/>
+        <package android:name="com.google.ar.core" />
     </queries>
 
     <!-- Required for AR -->
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -16,23 +17,30 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity">
+        <meta-data
+            android:name="com.google.ar.core"
+            android:value="optional" />
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MemoryLeakTest"
+        <activity
+            android:name=".MemoryLeakTest"
             android:configChanges="keyboardHidden|orientation|screenSize|uiMode"
             android:enableVrMode="false"
-            android:screenOrientation="portrait"
-            >
+            android:exported="false"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <category android:name="com.google.intent.category.CARDBOARD" />
                 <category android:name="com.google.intent.category.DAYDREAM" />
             </intent-filter>
         </activity>
-        <meta-data android:name="com.google.ar.core" android:value="optional" />
+
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
