--- a/android/renderertest/src/main/AndroidManifest.xml
+++ b/android/renderertest/src/main/AndroidManifest.xml
@@ -1,44 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.viromedia.renderertest">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.viromedia.renderertest">
 
     <queries>
-        <package android:name="com.google.ar.core"/>
+        <package android:name="com.google.ar.core" />
     </queries>
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <!-- Required to read the paired viewer's distortion parameters -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <!-- Required for AR -->
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <!-- Required for Recording -->
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name" android:supportsRtl="true"
-                 android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
-        <uses-library android:name="android.support.test.runner"
-            android:required="false"/>
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
+        tools:ignore="AllowBackup">
+
+        <uses-library
+            android:name="android.support.test.runner"
+            android:required="false" />
+
+        <meta-data
+            android:name="com.google.ar.core"
+            android:value="optional" />
+        <meta-data
+            android:name="com.google.android.ar.API_KEY"
+            android:value="AIzaSyCZy6wqu20yo-r6mUCne3KH0YrR18mP2QI" />
+
         <activity
             android:name="com.viromedia.renderertest.ViroActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|uiMode"
-            android:enableVrMode="false">
+            android:enableVrMode="false"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="com.google.intent.category.CARDBOARD" />
                 <category android:name="com.google.intent.category.DAYDREAM" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <meta-data android:name="com.google.ar.core" android:value="optional" />
-        <meta-data
-            android:name="com.google.android.ar.API_KEY"
-            android:value="AIzaSyCZy6wqu20yo-r6mUCne3KH0YrR18mP2QI" />
 
     </application>
 </manifest>
