--- a/android/code-samples/ARBlackPanther/build.gradle
+++ b/android/code-samples/ARBlackPanther/build.gradle
@@ -27,6 +27,7 @@ android {
             dimension "source"
         }
     }
+    namespace 'com.example.virosample.blackPanther'
 }
 
 dependencies {
