--- a/android/releasetest/build.gradle
+++ b/android/releasetest/build.gradle
@@ -65,6 +65,7 @@ android {
         }
     }
     sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
+    namespace 'com.viromedia.releasetest'
     tasks.withType(Test) {
         testLogging {
             exceptionFormat "full"
