--- a/android/code-samples/ARRetail/src/main/AndroidManifest.xml
+++ b/android/code-samples/ARRetail/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.virosample.retail">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <queries>
         <package android:name="com.google.ar.core"/>
@@ -13,7 +12,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".ProductApplicationContext"
+        android:name="com.example.virosample.retail.ProductApplicationContext"
         android:allowBackup="true"
         android:icon="@mipmap/viro_launcher"
         android:label="@string/app_name"
