--- a/android/mainSample/src/main/AndroidManifest.xml
+++ b/android/mainSample/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.virosample">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:icon="@mipmap/viro_launcher"
@@ -10,7 +9,7 @@
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
         tools:replace="android:icon,android:theme">
         <activity
-            android:name=".MLMainActivity"
+            android:name="com.example.virosample.MLMainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/NoActionBar">
