--- a/android/viroar/build.gradle
+++ b/android/viroar/build.gradle
@@ -36,6 +36,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.viro.ar'
 }
 
 dependencies {
