--- a/android/virocore/src/main/AndroidManifest.xml
+++ b/android/virocore/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.viro.virocore"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" />
