--- a/android/releasetest/src/main/AndroidManifest.xml
+++ b/android/releasetest/src/main/AndroidManifest.xml
@@ -2,13 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.viromedia.releasetest">
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
     <queries>
         <package android:name="com.google.ar.core"/>
     </queries>
 
     <!-- Required to read the paired viewer's distortion parameters -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+<!--    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />-->
 
     <!-- Required for AR -->
     <uses-permission android:name="android.permission.CAMERA" />
