--- a/android/renderertest/src/main/AndroidManifest.xml
+++ b/android/renderertest/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.viromedia.renderertest">
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
     <queries>
         <package android:name="com.google.ar.core" />
     </queries>
@@ -10,7 +14,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <!-- Required to read the paired viewer's distortion parameters -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!--    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />-->
 
     <!-- Required for AR -->
     <uses-permission android:name="android.permission.CAMERA" />
