--- a/android/sharedCode/src/main/AndroidManifest.xml
+++ b/android/sharedCode/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.VIBRATE"/>
     <!-- Required to read the paired viewer's distortion parameters. -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+<!--    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>-->
     <!-- Required for Recording -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
