Fix xcpretty usage for false positive success
- https://github.com/xcpretty/xcpretty?tab=readme-ov-file#usage

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -81,7 +81,7 @@ jobs:
       - name: Xcodebuild iOS Renderer (non-static)
         run: |
           cd ios
-          xcodebuild \
+          set -o pipefail && xcodebuild \
             -workspace ViroRenderer.xcworkspace \
             -scheme ViroKit \
             -sdk iphoneos \
