--- a/android/nativetest/build.gradle
+++ b/android/nativetest/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     flavorDimensions "target_platform"
+    namespace "com.viromedia.nativetest"
     compileSdkVersion 31
 
     defaultConfig {
@@ -26,25 +27,25 @@ android {
             dimension "target_platform"
             resValue "string", "app_name", "RendererTest-gvr"
             applicationIdSuffix ".gvr"
-            buildConfigField "String", "VR_PLATFORM", "\"GVR\""
+            //buildConfigField "String", "VR_PLATFORM", "\"GVR\""
         }
         ovr {
             dimension "target_platform"
             resValue "string", "app_name", "RendererTest-ovr"
             applicationIdSuffix ".ovr"
-            buildConfigField "String", "VR_PLATFORM", "\"OVR\""
+            //buildConfigField "String", "VR_PLATFORM", "\"OVR\""
         }
         arcore {
             dimension "target_platform"
             resValue "string", "app_name", "RendererTest-arcore"
             applicationIdSuffix ".arcore"
-            buildConfigField "String", "VR_PLATFORM", "\"ARCore\""
+            //buildConfigField "String", "VR_PLATFORM", "\"ARCore\""
         }
         scene {
             dimension "target_platform"
             resValue "string", "app_name", "RendererTest-scene"
             applicationIdSuffix ".scene"
-            buildConfigField "String", "VR_PLATFORM", "\"Scene\""
+            //buildConfigField "String", "VR_PLATFORM", "\"Scene\""
         }
     }
     sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
@@ -64,5 +65,5 @@ dependencies {
     implementation project(':libs:arcore')
     implementation project(':libs:gvr')
     implementation project(':virocore')
-    implementation "androidx.appcompat:appcompat:1.3.1"
+    implementation "androidx.appcompat:appcompat:1.0.0"
 }
