--- a/android/memoryleaktest/build.gradle
+++ b/android/memoryleaktest/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 
 android {
     flavorDimensions "target_platform"
+    namespace "com.example.memoryleaktest"
 
     compileSdkVersion 31
     defaultConfig {
@@ -30,25 +31,25 @@ android {
             dimension "target_platform"
             resValue "string", "app_name", "MemoryLeakTest-gvr"
             applicationIdSuffix ".gvr"
-            buildConfigField "String", "VR_PLATFORM", "\"GVR\""
+            //buildConfigField "String", "VR_PLATFORM", "\"GVR\""
         }
         ovr {
             dimension "target_platform"
             resValue "string", "app_name", "MemoryLeakTest-ovr"
             applicationIdSuffix ".ovr"
-            buildConfigField "String", "VR_PLATFORM", "\"OVR\""
+            //buildConfigField "String", "VR_PLATFORM", "\"OVR\""
         }
         arcore {
             dimension "target_platform"
             resValue "string", "app_name", "MemoryLeakTest-arcore"
             applicationIdSuffix ".arcore"
-            buildConfigField "String", "VR_PLATFORM", "\"ARCore\""
+            //buildConfigField "String", "VR_PLATFORM", "\"ARCore\""
         }
         scene {
             dimension "target_platform"
             resValue "string", "app_name", "MemoryLeakTest-scene"
             applicationIdSuffix ".scene"
-            buildConfigField "String", "VR_PLATFORM", "\"Scene\""
+            //buildConfigField "String", "VR_PLATFORM", "\"Scene\""
         }
     }
     sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
@@ -61,7 +62,7 @@ dependencies {
     implementation project(':virocore')
     implementation project(':libs:gvr')
     implementation project(':libs:arcore')
-    implementation "androidx.appcompat:appcompat:1.3.1"
-    implementation "androidx.core:core-ktx:1.6.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.appcompat:appcompat:1.0.0"
+    implementation "androidx.core:core-ktx:1.8.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.21"
 }
