--- a/android/releasetest/build.gradle
+++ b/android/releasetest/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 
 android {
     flavorDimensions "target_platform"
+    namespace "com.viromedia.releasetest"
     compileSdkVersion 31
 
     defaultConfig {
@@ -30,38 +31,38 @@ android {
             dimension "target_platform"
             resValue "string", "app_name", "ReleasTest-gvr-vr"
             applicationIdSuffix ".gvr"
-            buildConfigField "String", "VR_PLATFORM", "\"GVR\""
-            buildConfigField "Integer", "VR_ENABLED", "1"
+            // buildConfigField "String", "VR_PLATFORM", "\"GVR\""
+            // buildConfigField "Integer", "VR_ENABLED", "1"
         }
 
         gvr_vr_disabled {
             dimension "target_platform"
             resValue "string", "app_name", "ReleasTest-gvr-360"
             applicationIdSuffix ".gvr"
-            buildConfigField "String", "VR_PLATFORM", "\"GVR\""
-            buildConfigField "Integer", "VR_ENABLED", "0"
+            // buildConfigField "String", "VR_PLATFORM", "\"GVR\""
+            // buildConfigField "Integer", "VR_ENABLED", "0"
         }
 
         ovr {
             dimension "target_platform"
             resValue "string", "app_name", "ReleaseTest-ovr"
             applicationIdSuffix ".ovr"
-            buildConfigField "String", "VR_PLATFORM", "\"OVR\""
-            buildConfigField "Integer", "VR_ENABLED", "1"
+            // buildConfigField "String", "VR_PLATFORM", "\"OVR\""
+            // buildConfigField "Integer", "VR_ENABLED", "1"
         }
         arcore {
             dimension "target_platform"
             resValue "string", "app_name", "ReleasTest-arcore"
             applicationIdSuffix ".arcore"
-            buildConfigField "String", "VR_PLATFORM", "\"ARCore\""
-            buildConfigField "Integer", "VR_ENABLED", "0"
+            // buildConfigField "String", "VR_PLATFORM", "\"ARCore\""
+            // buildConfigField "Integer", "VR_ENABLED", "0"
         }
         scene {
             dimension "target_platform"
             resValue "string", "app_name", "ReleasTest-scene"
             applicationIdSuffix ".scene"
-            buildConfigField "String", "VR_PLATFORM", "\"Scene\""
-            buildConfigField "Integer", "VR_ENABLED", "0"
+            // buildConfigField "String", "VR_PLATFORM", "\"Scene\""
+            // buildConfigField "Integer", "VR_ENABLED", "0"
         }
     }
     sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
@@ -77,21 +78,21 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation project(':virocore')
     implementation project(':libs:arcore')
     implementation project(':libs:gvr')
-    implementation "androidx.appcompat:appcompat:1.3.1"
+    implementation "androidx.appcompat:appcompat:1.0.0"
     // testing dependencies
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0"
     androidTestImplementation 'androidx.test:rules:1.4.0'
     androidTestImplementation "androidx.test:runner:1.4.0"
 
-    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation "androidx.test.ext:junit:1.1.4"
     androidTestImplementation "androidx.test.ext:truth:1.4.0"
     androidTestImplementation('org.awaitility:awaitility:4.1.1') {
         transitive = false
     }
-    implementation "androidx.core:core-ktx:1.6.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.core:core-ktx:1.8.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.21"
 }
