--- a/android/viroreact/build.gradle
+++ b/android/viroreact/build.gradle
@@ -3,10 +3,12 @@ apply plugin: 'maven-publish'
 
 android {
     compileSdkVersion 31
+    namespace "com.viro.viroreact"
 
     defaultConfig {
         minSdkVersion 24
         targetSdkVersion 31
+        ndkVersion = "25.2.9519653"
 
         ndk {
             // React Native does not support arm64-v8a yet, so don't bother including
@@ -84,11 +86,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.3.1"
-    implementation 'com.google.android.exoplayer:exoplayer:2.18.4'
+    implementation "androidx.appcompat:appcompat:1.0.0"
+    implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
     implementation project(':libs:gvr')
     implementation project(':libs:arcore')
-    implementation 'com.google.protobuf.nano:protobuf-javanano:3.2.0rc2'
+    implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
 }
 
 task copyReleaseAAR(type: Copy) {
@@ -129,12 +131,12 @@ tasks.whenTaskAdded { task ->
     }
 }
 
-project.afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
-            }
-        }
-    }
-}
+// project.afterEvaluate {
+//     publishing {
+//         publications {
+//             release(MavenPublication) {
+//                 from components.release
+//             }
+//         }
+//     }
+// }
